# shadow

./: .gitignore  README.md  main.cpp  meson.build  shadow.cpp  shadow.h
include/: meson.build  shadow.h  user.h
src/: main.cpp  meson.build  shadow.cpp  user.cpp
subprojects/: .gitignore
subprojects/date-2.4.1/: meson.build  meson_options.txt
test/: meson.build  shadow_test.cpp
